--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
   </style>
 </head>
 <body oncontextmenu="return false">
-  <iframe src="yourfile.pdf"></iframe>
+  <iframe src="pizza new card.pdf"></iframe>
 </body>
 </html>
